--- a/style.css
+++ b/style.css
@@ -1,29 +1,61 @@
-div{ 
+#first{ 
     background-image: url(images/donation13.jpg);
     height: 550px;
     background-repeat:no-repeat;
     background-size: 100%;
-
 }
-h1{
+    h1{
     text-align: center;
     font-size: 50px;
     color: rgb(240, 226, 233);
-   padding-top: 100px;
-    
+    padding-top: 100px; 
 }
 p{
     text-align: center;
     font-size: 20px;
-    color: rgba(0, 255, 255, 0.979);
-    padding-top: 30px;
+    color: rgba(13, 245, 156, 0.979);
+    padding-top: 5px;
 }
 .button{
     text-decoration: none;
     font-size: 30px; 
-    background-color: rgba(248, 199, 107, 0.918);
-    border-radius: 5px;
+    background-color: rgb(240, 38, 11);
+    border-radius: 3px;
     margin-left: 570px;
     padding-top: 2px;
    
 }
+.paragraph-2{
+    color: black;
+    font-size: 25px;
+}
+h2{
+    text-align: center;
+    color: rgb(238, 241, 9);
+    font-size: 50px;
+}
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.amount{
+    font-size: 50px;
+    color: black;
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 10px 10px 40px gray;
+}
+.color{
+    border: 12px solid rgb(252, 165, 165);
+}
+.alternative{
+    font-size: 40px;
+    color: deepskyblue;
+}
+
+
+
+
+
+
