--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 p{
     text-align: center;
     font-size: 20px;
-    color: rgba(13, 245, 156, 0.979);
+    color: rgba(236, 214, 17, 0.979);
     padding-top: 5px;
 }
 .button{
@@ -31,7 +31,7 @@ p{
 }
 h2{
     text-align: center;
-    color: rgb(238, 241, 9);
+    color: rgb(250, 176, 16);
     font-size: 50px;
 }
 section{
@@ -54,9 +54,53 @@ section{
     font-size: 40px;
     color: deepskyblue;
 }
+h3{
+    text-align: center;
+    font-size: 45px;
+    color: rgb(252, 141, 7);
+}
+.categories{
+    font-size: 20px;
+    color: black;
+    margin: 2%;
+    padding: 2%;
+    box-shadow: 10px 10px 40px gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
 
+h4{
+    font-size: 30px;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+}
+#color-category-one{
+    background-color: rgb(236, 222, 156);
+    padding-right: 7px;
+    margin-right: 5px;
+    width: 31%;
+    height: 31%;
+}
+#color-categor-two{
+background-color: rgb(248, 194, 18);
+padding-right: 7px;
+margin-right: 5px;
+width: 31%;
+height: 31%;
 
-
-
-
-
+}
+#color-category-three{
+    background-color: rgba(15, 205, 253, 0.514);
+    padding-right: 7px;
+    margin-right: 5px;
+    width: 31%;
+    height: 31%;
+}
+.categories img{
+    width: 25%;
+}
+.paragraph-3{
+    color: black;
+}
