--- a/style.css
+++ b/style.css
@@ -18,11 +18,11 @@ p{
 }
 .button{
     text-decoration: none;
-    font-size: 30px; 
-    background-color: rgb(240, 38, 11);
-    border-radius: 3px;
-    margin-left: 570px;
-    padding-top: 2px;
+    font-size: 40px;
+    background-color: #ed7d7d;
+    border-radius: 5px;
+    margin-left: 43%;
+    padding-top: 10px 40px;
    
 }
 .paragraph-2{
@@ -74,7 +74,8 @@ h3{
 h4{
     font-size: 30px;
     color: black;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+    
 }
 #color-category-one{
     background-color: rgb(236, 222, 156);
@@ -103,4 +104,20 @@ height: 31%;
 }
 .paragraph-3{
     color: black;
+    margin-top: 0%;
+}
+h5{
+    font-size: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+#text-image{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+    margin-top: 0%;
+}
+.half-width img{
+    width: 80%;
 }
