--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ p{
 .paragraph-2{
     color: black;
     font-size: 25px;
+    margin-top: 0%;
 }
 h2{
     text-align: center;
@@ -105,6 +106,7 @@ height: 31%;
 .paragraph-3{
     color: black;
     margin-top: 0%;
+    
 }
 h5{
     font-size: 50px;
@@ -121,3 +123,23 @@ h5{
 .half-width img{
     width: 80%;
 }
+h6{
+    font-size: 40px;
+    text-align: center;
+    margin-bottom; 0%:
+    padding-top: 0%;
+    
+}
+.finishing{
+    width: 300px;
+    border: 5px solid;
+    padding: 50px;
+    position: relative;
+    margin: auto;
+    background-color: beige;
+}
+footer{
+    text-align: center;
+}
+
+
